@@ -18,6 +18,7 @@
 package org.apache.cassandra.auth;
 
 import java.util.Set;
+import java.util.function.Supplier;
 
 /**
  * The interface at the core of Cassandra authorization.
@@ -65,4 +66,21 @@ public interface IResource
      * @return the permissions that may be granted on the specific resource
      */
     Set<Permission> applicablePermissions();
+
+
+    /**
+     * Some resource implementations are keyspace-aware (DataResource, FunctionResource), while others
+     * are not (JMXResource, RoleResource). For some keyspace-aware resources (principally DataResource),
+     * CQL syntax allows the relevant keyspace to be inferred from the ClientState, where a preceding
+     * USE KEYSPACE statement has been issued. These keyspace-aware resources should implement this method
+     * to return an IResource instance of the appropriate type, properly qualified with the supplied
+     * keyspace (if not explicitly set already).
+     * @param keyspace function to supply the name of the keyspace to set on the IResource.
+     * @return An IResource instance, if the implementation is keyspace aware its keyspace will be set
+     * to the result of calling the supplied function.
+     */
+    default IResource qualifyWithKeyspace(Supplier<String> keyspace)
+    {
+        return this;
+    }
 }
