@@ -18,7 +18,6 @@
 package org.apache.cassandra.cql3.statements;
 
 
-import org.apache.cassandra.auth.DataResource;
 import org.apache.cassandra.auth.IResource;
 import org.apache.cassandra.cql3.CQLStatement;
 import org.apache.cassandra.cql3.QueryOptions;
@@ -58,12 +57,6 @@ public abstract class AuthorizationStatement extends ParsedStatement implements 
 
     public static IResource maybeCorrectResource(IResource resource, ClientState state) throws InvalidRequestException
     {
-        if (DataResource.class.isInstance(resource))
-        {
-            DataResource dataResource = (DataResource) resource;
-            if (dataResource.isTableLevel() && dataResource.getKeyspace() == null)
-                return DataResource.table(state.getKeyspace(), dataResource.getTable());
-        }
-        return resource;
+        return resource.qualifyWithKeyspace(state::getKeyspace);
     }
 }
